# norma-machine-rs

./: Cargo.toml  example.norma
src/: error.rs  lib.rs  norma.pest
