[package]
name = "norma_machine_rs"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Barbosa Fernandes <fernandesbgabriel@gmail.com>"]
license = "MIT"
repository = "https://github.com/GabrielBFern/norma-machine-rs"
categories = ["mathematics", "science", "simulation"]
description = """
Open library for implementation Norma Machines.
"""
keywords = ["cross-platform", "math", "science", "simulation", "norma-machine"]
exclude = [".github/*", ".gitignore"]


[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.15"
pest = "2.5.5"
pest_derive = "2.5.5"
thiserror = "1.0.38"
